--- a/engine_and_web/web_build/index.html
+++ b/engine_and_web/web_build/index.html
@@ -8,7 +8,7 @@
     <!-- Here's where we will be drawing to -->
     <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
 
-    <script type='text/javascript'>
+    <script type="text/javascript">
       var Module = {
         canvas: (function() { return document.getElementById("canvas"); })()
       };
